# portal_auto_key_in_browser_agent

./: .gitignore  Browser_Auto_key_in new.code-workspace
Auto Key In Refactor/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  debug_delete_one_p1b.py  debug_p1b_duplicate_scan.py  delete_remaining_p1b_duplicates.py  docker-compose.yml  findings.md  patch_ui.py  progress.md  pyproject.toml  run-dev.bat  run.bat  setup.ps1  setup.sh  task_plan.md
Auto Key In Refactor/.antigravitycli/: 81322805-61c2-49e4-b32a-ee8558f2f455.json
Auto Key In Refactor/.playwright-mcp/: page-2026-05-31T16-54-46-248Z.yml  page-2026-05-31T16-55-14-823Z.yml  page-2026-05-31T16-57-19-916Z.yml  page-2026-05-31T16-57-46-601Z.yml  page-2026-05-31T16-58-20-789Z.yml  page-2026-05-31T16-58-45-987Z.yml  page-2026-05-31T17-00-54-895Z.yml  page-2026-05-31T17-49-17-561Z.yml  page-2026-05-31T17-51-17-341Z.yml  page-2026-05-31T17-51-26-011Z.yml  page-2026-05-31T17-54-03-253Z.yml  page-2026-05-31T17-55-10-644Z.yml  page-2026-05-31T18-20-36-107Z.yml  page-2026-05-31T18-21-50-260Z.yml  page-2026-05-31T18-24-22-562Z.yml  page-2026-05-31T18-43-05-182Z.yml  page-2026-05-31T18-45-00-729Z.yml  page-2026-05-31T18-46-03-732Z.yml  page-2026-05-31T18-47-20-712Z.yml
Auto Key In Refactor/_dev_utils/: check_koreksi_panen.py  check_missing_premi.py
Auto Key In Refactor/app/: __init__.py  main.py
Auto Key In Refactor/configs/: adjustment-categories.json  ai-models.json  app.example.json  app.json  divisions.json
Auto Key In Refactor/docs/: DESCRIPTION-RULES.md  DIVISION-CODES.md  (+2 more)
template/: .gitignore  (+4 more)
(+188 files in other folders)
